# translator_bot

./: .env.template  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
tg_bot/handlers/: __init__.py
tg_bot/handlers/user/: __init__.py
tg_bot/handlers/user/start/: __init__.py  start.py
tg_bot/handlers/user/translate/: __init__.py  translate.py
tg_bot/handlers/user/unprocessed_messages/: __init__.py  unprocessed_messages.py
tg_bot/services/: __init__.py  bot_commands.py  bot_description.py  translate_text.py
